# python-samplerate

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  samplerate.py  samplerate_build.py  setup.cfg  setup.py  test_samplerate.py
.github/workflows/: pythonpackage.yml
docs/: Makefile  changelog.rst  conf.py  index.rst
docs/samplerate/: converters.rst  exceptions.rst  index.rst  lowlevel.rst  samplerate.rst
examples/: play_modulation.py
samplerate/: __init__.py  _version.py  converters.py  exceptions.py  lowlevel.py  samplerate.py  samplerate_build.py
samplerate/_samplerate_data/: README.md  build-samplerate.sh  build_samplerate_mxe.sh
src/: python-samplerate.cpp  samplerate.cpp
tests/: test_api.py  test_asyncio_performance.py  test_exception.py  test_resampling.py  test_resize.py  test_samplerate.py  test_threading_performance.py
