[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name="samplerate"
dynamic = ["version", "readme"]
description="Monolithic python wrapper for libsamplerate based on pybind11 and NumPy"
authors=[
{"name" = "Robin Scheibler", "email" ="fakufaku@gmail.com"},
{"name" = "Tino Wagner", "email" ="ich@tinowagner.com"}
]
requires-python = ">=3.7"
classifiers=[
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Multimedia :: Sound/Audio",
]
keywords=["samplerate", "converter", "signal processing", "audio"]
license = "MIT"
dependencies = ["numpy"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.setuptools_scm]
